--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,9 @@
         <article>
             <h2>Título de la Noticia 1</h2>
             <img src="imagen1.jpg" alt="Imagen 1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod augue et diam sodales, sit amet tristique ligula consequat. Ut auctor lorem eu ex semper, ut ultricies tortor fermentum.</p>
+            <p>"Descubren nueva especie de planta carnívora en la selva amazónica"
+
+Investigadores de la Universidad Nacional de la Amazonía Peruana han anunciado el descubrimiento de una nueva especie de planta carnívora en lo profundo de la selva amazónica. Esta planta, que ha sido bautizada como "Dionaea amazonica", posee características únicas que la distinguen de otras especies conocidas hasta el momento. Su hallazgo ha generado gran interés entre la comunidad científica y abre nuevas perspectivas para el estudio de la biodiversidad en la región amazónica. Los científicos esperan que este descubrimiento contribuya a la conservación de los ecosistemas tropicales y al entendimiento de la evolución de las plantas carnívoras.</p>
         </article>
 
         <article>
